Fixed hamburger menu horizontal scroll
Changed viewport so horizontal scroll and space doesn't appear after slide-in menu.

--- a/styles.scss
+++ b/styles.scss
@@ -82,13 +82,17 @@
    text-decoration: none;
  }
 
- // Bottom SVG 
 
- body {
+ // Bottom SVG 
+ html {
+   overflow-x: hidden;
+ }
+
+  body {
   position: relative;
   width: 100%;
   height: 100%;
-
+  
   .svg {
     position: absolute;
     bottom: 0;
@@ -116,6 +120,7 @@
    align-items: center;
    position: relative;
    z-index: 1;
+   
 
    .navbar__container {
      width: 100%;
@@ -128,6 +133,7 @@
      align-items: center;
      position: relative;
 
+    
      .navbar__container__button {
        border: none;
        background: none;
@@ -165,7 +171,6 @@
      -webkit-box-shadow: 0px 10px 15px -8px rgba(0, 0, 0, 0.15);
      -moz-box-shadow: 0px 10px 15px -8px rgba(0, 0, 0, 0.15);
      box-shadow: 0px 10px 15px -8px rgba(0, 0, 0, 0.15);
-     display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
